fixed issue where current overlay bumps up against top of tabs on mobile

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -341,7 +341,7 @@ hr {
     background-color: rgba($success-color, 0.2);
     padding-top: 10px;
     padding-bottom: 10px;
-
+    margin-top: 15px;
     .btn {
       font-size: 16px;
     }
